--- a/index.html
+++ b/index.html
@@ -293,6 +293,22 @@
             </div>
 
             <div class="project-card">
+                <div class="project-status complete">Complete</div>
+                <div class="project-icon">🌐</div>
+                <h2 class="project-title">Network Chat Application</h2>
+                <p class="project-desc">Multi-client chat application with real-time messaging using Python and Tkinter. Features server-side management, message broadcasting, private messaging, and administrative controls (kick/ban). Uses threading and sockets for simultaneous client connections and JSON for structured communication.</p>
+                <div class="tech-tags">
+                    <span class="tech-tag">Python</span>
+                    <span class="tech-tag">Tkinter</span>
+                    <span class="tech-tag">Socket</span>
+                    <span class="tech-tag">Threading</span>
+                    <span class="tech-tag">JSON</span>
+                    <span class="tech-tag">GUI Development</span>
+                </div>
+                <a href="https://github.com/MPALONDON/GUI_Network" class="github-link">View on GitHub →</a>
+            </div>
+
+            <div class="project-card">
                 <div class="project-status">Work in Progress</div>
                 <div class="project-icon">📚</div>
                 <h2 class="project-title">Bookshelf Scanner</h2>
