--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
                     <span class="tech-tag">Bootstrap 5</span>
                     <span class="tech-tag">Bright Data API</span>
                 </div>
+                <a href="https://product-tracker-i2ci.onrender.com/" class="github-link">View page on Render →</a>
                 <a href="https://github.com/MPALONDON/Product_Tracker" class="github-link">View on GitHub →</a>
             </div>
 
