--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         .project-card:nth-child(3) { animation-delay: 0.5s; }
         .project-card:nth-child(4) { animation-delay: 0.6s; }
         .project-card:nth-child(5) { animation-delay: 0.7s; }
+        .project-card:nth-child(6) { animation-delay: 0.8s; }
 
         .project-card::before {
             content: '';
@@ -254,6 +255,9 @@
                 line-height: 1.8;
                 color: #b0b0b0;
         }
+            .project-link{
+                margin-top: 1.1rem;
+            }
     </style>
 </head>
 <body>
@@ -262,7 +266,7 @@
     <div class="container">
         <header>
             <h1 class="name">Bello-Pluto Salvatore</h1>
-            <p class="tagline">Python Developer | Web Scraping | AI Integration | Flask Enthusiast</p>
+            <p class="tagline">Python Developer | Web Scraping | AI Integration | Flask/FastAPI Enthusiast</p>
         </header>
 
         <section class="about-me">
@@ -270,8 +274,8 @@
             <p class="about-text">
                 I taught myself Python because I wanted to build stuff, not just fix it.
                 What started as curiosity turned into Flask apps, web scrapers, and AI-powered tools.
-                No bootcamp, no CS degree—just a lot of late nights, Stack Overflow, and figuring things out the hard way.
-                Now I write code that actually solves problems, from tracking Amazon prices to scanning bookshelves with AI.
+                No bootcamp, no CS degree just figuring things by making mistakes.
+                Now I write code that actually solves problems, from tracking Amazon prices to creating networking applications.
             </p>
         </section>
 
@@ -290,7 +294,9 @@
                     <span class="tech-tag">Bright Data API</span>
                 </div>
                 <a href="https://product-tracker-i2ci.onrender.com/" class="github-link">View page on Render →</a>
+                <div class="project-link">
                 <a href="https://github.com/MPALONDON/Product_Tracker" class="github-link">View on GitHub →</a>
+                </div>
             </div>
 
             <div class="project-card">
@@ -373,7 +379,7 @@
         </div>
 
         <footer>
-            <p>© 2025 Bello-Pluto Salvatore. Built with passion for Python and web technologies.</p>
+            <p>© 2025 Bello-Pluto Salvatore</p>
         </footer>
     </div>
 
